--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@
                                                                         <!-- THE COLORED OVERLAY -->
                                                                         <div class="esg-overlay esg-fade eg-tm-projects-01-container" data-delay="0"></div>
 
-                                                                        <div class="esg-bottom eg-post-143 eg-tm-projects-01-element-3-a esg-slideshortup" data-delay="0.1"><a class="eg-tm-projects-01-element-3 eg-post-143" href="#" target="_self">Interior Design</a></div>
+                                                                        <div class="esg-bottom eg-post-143 eg-tm-projects-01-element-3-a esg-slideshortup" data-delay="0.1"><a class="eg-tm-projects-01-element-3 eg-post-143" href="#" target="_self">Main Door</a></div>
                                                                         <div class="esg-center eg-post-143 eg-tm-projects-01-element-0-a esg-falldown" data-delay="0.1"><a class="eg-tm-projects-01-element-0 eg-post-143 esgbox" href="upload/image_1440x900_05.PNG" ><i class="eg-icon-search"></i></a></div>
                                                                     </div>
                                                                     <!-- END OF THE CONTENT IN THE ENTRY -->
@@ -768,7 +768,7 @@
                                                                         <!-- THE COLORED OVERLAY -->
                                                                         <div class="esg-overlay esg-fade eg-tm-projects-01-container" data-delay="0"></div>
 
-                                                                        <div class="esg-bottom eg-post-148 eg-tm-projects-01-element-3-a esg-slideshortup" data-delay="0.1"><a class="eg-tm-projects-01-element-3 eg-post-148" href="#" target="_self">Bookcase Designs</a></div>
+                                                                        <div class="esg-bottom eg-post-148 eg-tm-projects-01-element-3-a esg-slideshortup" data-delay="0.1"><a class="eg-tm-projects-01-element-3 eg-post-148" href="#" target="_self">Panel Door</a></div>
                                                                         <div class="esg-center eg-post-148 eg-tm-projects-01-element-0-a esg-falldown" data-delay="0.1"><a class="eg-tm-projects-01-element-0 eg-post-148 esgbox" href="upload/image_1440x900_01.jpg"><i class="eg-icon-search"></i></a></div>
                                                                     </div>
                                                                     <!-- END OF THE CONTENT IN THE ENTRY -->
@@ -790,7 +790,7 @@
                                                                         <!-- THE COLORED OVERLAY -->
                                                                         <div class="esg-overlay esg-fade eg-tm-projects-01-container" data-delay="0"></div>
 
-                                                                        <div class="esg-bottom eg-post-149 eg-tm-projects-01-element-3-a esg-slideshortup" data-delay="0.1"><a class="eg-tm-projects-01-element-3 eg-post-149" href="#" target="_self">Study Room Renovation</a></div>
+                                                                        <div class="esg-bottom eg-post-149 eg-tm-projects-01-element-3-a esg-slideshortup" data-delay="0.1"><a class="eg-tm-projects-01-element-3 eg-post-149" href="#" target="_self">Flush Door</a></div>
                                                                         <div class="esg-center eg-post-149 eg-tm-projects-01-element-0-a esg-falldown" data-delay="0.1"><a class="eg-tm-projects-01-element-0 eg-post-149 esgbox" href="upload/image_1440x900_04.jpg" ><i class="eg-icon-search"></i></a></div>
                                                                     </div>
                                                                     <!-- END OF THE CONTENT IN THE ENTRY -->
